<resources>
    <string name="app_name">AppPrueba</string>
    <string name="encuesta_titulo">Encuesta de Educación 2026 · Capítulo 300</string>
    <string name="btn_anterior">Anterior</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_reiniciar">Reiniciar encuesta</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_iniciar">Iniciar encuesta</string>
    <string name="encuesta_fin_titulo">Encuesta finalizada</string>
    <string name="encuesta_fin_detalle">Las respuestas quedaron guardadas en el dispositivo.</string>
    <string name="campo_texto">Escriba aquí</string>
    <string name="campo_codigo">Código</string>
    <string name="seleccion_placeholder">-- Seleccione --</string>
    <string name="error_requerido">Seleccione una opción para continuar</string>
    <string name="dialogo_codigo_titulo">Buscar y agregar</string>
    <string name="dialogo_codigo_hint">Código o valor</string>
    <string name="dialogo_aceptar">Aceptar</string>
    <string name="dialogo_cancelar">Cancelar</string>
    <string name="progreso_formato">%1$d / %2$d</string>
    <string name="login_titulo">Iniciar sesión</string>
    <string name="title_survey">ENAHO</string>
    <string name="title_survey_detail">Encuesta Nacional de Hogares 2026</string>
    <string name="login_de_hogares">de Hogares 2026</string>
    <string name="login_card_titulo">Ingreso de Usuario</string>
    <string name="login_version">Versión v1.0.0</string>
    <string name="login_footer">Instituto de Nacional de Estadística e Informática © 2026. Todos los derechos reservados.</string>
    <string name="login_cd_logo">Logo institucional</string>
    <string name="login_cd_usuario">Icono de usuario</string>
    <string name="login_cd_contrasena">Icono de contraseña</string>
    <string name="login_cd_validacion">Validación</string>
    <string name="login_cd_info">Información de la aplicación</string>
    <string name="campo_usuario">Usuario</string>
    <string name="campo_contrasena">Contraseña</string>
    <string name="btn_iniciar_sesion">Aceptar</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="main_menu_cd">Abrir menú de navegación</string>
    <string name="main_drawer_usuario_cd">Icono de usuario</string>
    <string name="main_cargo">Encuestador</string>
    <string name="menu_informacion">Información</string>
    <string name="menu_marco">Marco</string>
    <string name="menu_cobertura">Cobertura</string>
    <string name="menu_exportacion">Exportación</string>
    <string name="menu_cargar_muestra">Cargar muestra</string>
    <string name="section_placeholder_detalle">Esta sección estará disponible en una próxima versión.</string>
</resources>
